# lobs-server

./: .bandit  .coverage  .env.example  .gitignore  .work-summary  AGENTS.md  ARCHITECTURE.md  AUTH_SETUP.md  BATCH_PROCESSING_COMPLETE.md  CHANGELOG.md  COMPLETED.md  CONTRIBUTING.md  DB_LOCK_FIX_VERIFICATION.md  GITHUB_INTEGRATION_VALIDATION.md  HANDOFFS.md  KNOWN_ISSUES.md  MISSION_CONTROL_ENDPOINTS_ADDED.md  ORCHESTRATOR_AUDIT.md  ORCHESTRATOR_INTEGRATION.md  PIPELINE_AUDIT_REPORT.md  PIPELINE_COMPLETION_SUMMARY.md  PRE_MERGE_CHECKLIST.md  PROVIDER_HEALTH_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SOFTWARE_UPDATE_DETECTION_FIX.md  analyze_model_routing.py  analyze_usage_events.py  check_data.py  coverage.json  handoffs.json  pyproject.toml  pytest.ini  requirements.txt  research-findings.md  review-notes.md  run.sh  test_inbox_processor.py  usage_events_data.json
.handoffs/: daily-ops-brief.json  learning-1.1-database-models.md  learning-1.2-outcome-tracker.md  learning-1.3-feedback-api.md  learning-context-injector.json  learning-db-schema.json  learning-metrics-endpoint.json  learning-outcome-tracker.json  learning-pattern-extractor.json  learning-phase-1.1-database-tracking.json  learning-phase-1.2-pattern-extraction.json  learning-phase-1.3-prompt-enhancement.json  learning-phase-1.4-metrics-validation.json  orchestrator-refactor-critical-fixes.json  orchestrator-refactor-error-handling.json
app/: __init__.py  auth.py  backup.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
docs/: BEST_PRACTICES.md  INDEX.md  (+71 more)
(+409 files in other folders)
